welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:3: error: ';' expected but integer literal found.
  var a : =-50
            ^