welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.code
def indexOfMaxValue(nums:Array[Int]):Int = {
  var i : Int =0
  var a : =-50
  var b : Int =0
  for (i<-0 to nums.length-1){
    if (a<nums(i)){
      a=nums(i)
      b=i
    }
  }

  return b
}